# memory-allocator

./: CMakeLists.txt  README.md  main.cpp  memory-allocation.cpp  memory-allocation.h  memory-block.cpp  memory-block.h  sbrk.cpp  sbrk.h
buddy-allocation/: BlocksList.cpp  BlocksList.h  CMakeLists.txt  MemoryAllocator.cpp  MemoryAllocator.h  main.cpp
first-fit-allocation/: CMakeLists.txt  README.md  main.cpp  sbrk.h
